--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,13 +1,20 @@
+trigger:
+- main
+
 pool:
   vmImage: ubuntu-latest
 
 steps:
+- checkout: self
+- script: git clone https://github.com/BramVandenbossche/gpt-engineer.git
+  displayName: 'Clone the repository'
+
 - task: Docker@2
   inputs:
     containerRegistry: 'Harbor - hlann'
     repository: 'gpt-engineer/gpt-engineer'
     command: 'buildAndPush'
-    Dockerfile: 'docker/Dockerfile'
+    Dockerfile: 'gpt-engineer/docker/Dockerfile'
     buildContext: 'gpt-engineer'
     tags: |
       latest
